Update font family to use sans-serif
Missed the sans part of sans-serif!

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd-elements {
     background-color: #f593b4;
-    font-family: Verdana, "DejaVu Sans", serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 #second-element {
